restructure, parse refs and caps

--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,67 @@
-# Cabal build artifacts
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
 dist/
-dist-newstyle/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
 
-# Cabal sandbox (if using older cabal versions)
-cabal.sandbox.config/
-cabal.config
-cabal.project.local
-cabal.project.local~ 
+# Virtual environments
+env/
+venv/
+ENV/
+VENV/
+env.bak/
+venv.bak/
 
-# Stack (if you also use Stack)
-.stack-work/
+# Testing
+.coverage
+.tox/
+.nox/
+.pytest_cache/
+htmlcov/
 
-# GHC build artifacts
-*.hi
-*.o
-*.dyn_hi
-*.dyn_o
-*.prof
-*.aux
-*.hp
-*.eventlog
-
-# GHCi history & config
-.ghc.environment.*
-.ghci
-
-# Executables and logs
-*.out
-*.exe
-*.log
-
-# VSCode / JetBrains / other editor files
+# IDEs and editors
 .vscode/
 .idea/
-*.iml
+*.swp
+*.swo
 
-# OS-specific files
-.DS_Store
-Thumbs.db
+# Logs
+*.log
+
+# Jupyter Notebook checkpoints
+.ipynb_checkpoints/
+
+# MyPy and Pyright
+.mypy_cache/
+.pyright/
+
+# PyInstaller
+*.spec
+
+# Unit test, coverage reports
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+
+# Pydantic compiled validators (Pydantic v2+)
+__pydantic_model__.*
